--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,6 @@ body {
 /* --------------- COLLAPSE BUTTON -------------- */
 
 .collapse-btn {
-    display: inline;
     width: 100%;
     padding: 0.5em 1em;
     text-align: left;
@@ -97,8 +96,8 @@ body {
 }
 
 .add-btn:hover {
-    padding: 0.5em 0.5em;
-    background-color: rgb(95, 200, 70);
+    margin-left: 0.5em;
+    background-color: rgb(95, 166, 70);
 }
 
 .add-btn:focus {
@@ -112,7 +111,7 @@ body {
     color: white;
     text-align: left;
     border-radius: 5px;
-    padding: 0.4em 0.4em;
+    padding: 0.8em 0.8em;
     transition: 0.1s;
     -moz-transition:0.1s;
     -webkit-transition:0.1s;
@@ -123,7 +122,8 @@ body {
 }
 
 .del-btn:hover {
-    background-color: rgb(200, 70, 70);
+    margin-right: 0.5em;
+    background-color: rgb(166, 70, 70);
 }
 
 .del-btn:focus {
@@ -132,10 +132,10 @@ body {
 
 /* --------------- OPTIONS ---------------------- */
 
-.options {
+/*.options {
     padding: 0.5em;
     border-radius: 5px;
     background-color: rgb(248, 248, 248);
     border-left: 2px solid rgb(172, 172, 172);
     border-bottom: 2px solid rgb(172, 172, 172);
-}
+}*/
